# Minima

./: .gitignore  Dockerfile  README.md  cli.py  hash_plugins.py  minima_init. Py  minima_init.py  pyproject.toml  requirements.txt  setup.cfg
config/: __init__.py  config.yaml  default.yaml  plugins.yaml
exports/: results_20251030_063703.csv  results_20251030_065120.json
minima/: main.py
minima/core/: base_exporter.py  base_plugin.py  base_scraper.py  config_loader.py  errors.py  exporter.py  generic_analyzer.py  logger.py  metrics.py  plugin_base.py  plugin_manager.py  queue.py  sandbox.py  scraper.py
minima/data/: queue.json
minima/plugins/: analyzer_plugin.py  core_plugin.py  example_plugin.py  nlp_plugin.py  plugin_validator.py  trusted_hashes.txt
minima/utils/: exporter.py  metrics.py
tests/: conftest.py  test_config_loader.py  test_exporter.py  test_logger.py  test_queue.py  test_scraper.py
