[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minima"
version = "0.9"
description = "Framework modulaire de scraping et d’analyse extensible par plugins"
authors = [{ name = "Isidore La Flamme" }]
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["minima*"]
