[metadata]
name = minima
version = 1.0.0
author = Équipe Minima
description = Framework modulaire de scraping et d’analyse extensible
license = Unlicense
url = https://github.com/tonrepo/minima

[options]
packages = find:
python_requires = >=3.10
install_requires =
    requests
    pyyaml
    typer
    beautifulsoup4

[options.entry_points]
console_scripts =
    minima = minima.cli:app
